Fixes #495